# Zenox

./: .dockerignore  .gitignore  PRIVACY.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.prod.yml  build.staging.yml  codeql-analysis.yml  codeql.yml  pyright.yml
docker/: Dockerfile  Dockerfile.prod  stack.prod.yml  stack.staging.yml  zenox-prod.yml  zenox-staging.yml
grafana/: dashboard.json
prometheus/: prometheus.prod.yml  prometheus.staging.yml  prometheus.yml
zenox/: config.py  constants.py  embeds.py  emojis.py  enums.py  exceptions.py  l10n.py  types.py
zenox/auto_tasks/: check_codes.py  check_database.py  cleanDB.py  client_stats.py  hoyolabCodes.py  topGG.py  topgg.py  wikiCodes.py  ytb_monitor.py
zenox/bot/: __init__.py  bot.py  command_tree.py  error_handler.py
zenox/clients/: gi.py  sl.py  ytb.py
zenox/cogs/: accounts.py  config.py  dev.py  hoyo.py  link.py  others.py  prometheus.py  schedule.py  sendcodes.py  settings.py  userSettings.py
zenox/commands/: stats.py
zenox/db/: linking_cache.py  mongodb.py  structures.py
zenox/db/classes/: __init__.py  accounts.py  cache.py  codes.py  config.py  guilds.py  special_programs.py  users.py  videos.py
zenox/l10n/: de.yaml  en-US.yaml
zenox/metrics/: __init__.py  metrics.py
zenox/static/: constants.py  emojis.py  exceptions.py  icons.py  utils.py
zenox/ui/: components.py
zenox/ui/accounts/: view.py
zenox/ui/guild/: view.py
zenox/ui/guilds/: view.py
zenox/ui/hoyo/: stats.py
zenox/ui/hoyolab_codes/: view.py
zenox/ui/linking/: view.py
zenox/utils/: __init__.py  misc.py  start.py
(+18 files in other folders)
