[project]
name = "zenox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "psutil>=7.0.0",
    "pymongo>=4.15.0",
    "pyyaml>=6.0.2",
    "ruff>=0.13.0",
    "sentry-sdk[loguru]>=2.37.1",
    "toml>=0.10.2",
]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
