[project]
name = "zenox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "discord-py>=2.6.3",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "gitpython>=3.1.45",
    "google-api-python-client>=2.184.0",
    "pillow>=12.0.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.0.0",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.0",
    "pyyaml>=6.0.2",
    "ruff>=0.13.0",
    "sentry-sdk[loguru]>=2.37.1",
    "toml>=0.10.2",
]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
